force-app/main/default/objects/Children__c/Children__c.object-meta.xml
<CustomObject>
    <label>Children</label>
    <nameField>
        <label>Child Full Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Children</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>