force-app/main/default/objects/Children__c/fields/Grade_Level__c.field-meta.xml
<CustomField>
    <fullName>Grade_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grade Level</label>
    <referenceTo>Grade_Level__c</referenceTo>
    <relationshipLabel>Children</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>