force-app/main/default/objects/Children__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First Child</fullName>
            </value>
            <value>
                <fullName>Second Child</fullName>
            </value>
            <value>
                <fullName>Third Child</fullName>
            </value>
            <value>
                <fullName>Fourth Child</fullName>
            </value>
            <value>
                <fullName>Fifth Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>