force-app/main/default/objects/Children__c/fields/Years_Since_Join__c.field-meta.xml
<CustomField>
    <fullName>Years_Since_Join__c</fullName>
    <label>Years Since Join</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>